// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAutoRefresh is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiAutoRefresh testClass1 testClass2"
>
  <div
    class="euiPopover__anchor"
  >
    <div>
      <div
        class="euiFormControlLayout euiFormControlLayout--readOnly euiFormControlLayout--group"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiFormControlLayout__prepend euiFormControlLayout__prepend"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonContent__icon"
              color="inherit"
              data-euiicon-type="timeRefresh"
            />
            <span
              class="euiButtonEmpty__text"
            >
              <strong>
                <small>
                  Auto refresh
                </small>
              </strong>
            </span>
          </span>
        </button>
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="euiFieldText euiFieldText--inGroup"
            data-test-subj="test subject string"
            placeholder="Placeholder text"
            readonly=""
            type="text"
            value="Off"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiAutoRefreshButton is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
>
  <div
    class="euiPopover__anchor"
  >
    <button
      aria-label="aria-label"
      class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiAutoRefreshButton testClass1 testClass2"
      data-test-subj="test subject string"
      title="Auto refresh is off"
      type="button"
    >
      <span
        class="euiButtonContent euiButtonEmpty__content"
      >
        <span
          class="euiButtonContent__icon"
          color="inherit"
          data-euiicon-type="timeRefresh"
        />
        <span
          class="euiButtonEmpty__text"
        >
          <strong>
            <small>
              Off
            </small>
          </strong>
        </span>
      </span>
    </button>
  </div>
</div>
`;
